bug: fixing bug element overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,11 @@
 html {
   scroll-behavior: smooth !important;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden !important;
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   transition: 300ms ease-in-out;
 }
 
